deps/chakrashim/core/test/inlining/linenumber3.js
//-------------------------------------------------------------------------------------------------------
// Copyright (C) Microsoft. All rights reserved.
// Licensed under the MIT license. See LICENSE.txt file in the project root for full license information.
//-------------------------------------------------------------------------------------------------------

(function(){
  var __loopvar0 = 0;
  do {
    __loopvar0++;
    if(Math.acos(1)) {
      var __loopvar3 = 0;
      LABEL2: 
      while((1) && __loopvar3 < 3) {
        __loopvar3++;
        obj1.a *=Math.pow((1.1 / (-7.9574794502888E+18 == 0 ? 1 : -7.9574794502888E+18)), 1.1);
      }
    }
    else {
      (function(){
      })();
    }
    (ary[(((1 >= 0 ? 1 : 0)) & 0XF)]);
  } while((1) && __loopvar0 < 3)
})();
